Change spelling and added Nav

--- a/Homepage.html
+++ b/Homepage.html
@@ -3,7 +3,10 @@
     <title>About us</title>
   </head>
   <body>
-    <h1>Everythign about us </h1>
+    <nav>
+      <a href="#">Home</a>
+    </nav>
+    <h1>Everything about us </h1>
     <p>This is first paragraph</p>
   </body>
 </html>
