--- a/Homepage.html
+++ b/Homepage.html
@@ -5,6 +5,8 @@
   <body>
     <nav>
       <a href="#">Home</a>
+      <a href="#">About</a>
+      <a href="#">Contact</a>
     </nav>
     <h1>Everything about us </h1>
     <p>This is first paragraph</p>
