--- a/Homepage.html
+++ b/Homepage.html
@@ -11,4 +11,7 @@
     <h1>Everything about us </h1>
     <p>This is first paragraph</p>
   </body>
+  <footer>
+    Original Work by yourself
+  </footer>
 </html>
