--- a/Homepage.html
+++ b/Homepage.html
@@ -7,6 +7,8 @@
       <a href="#">Home</a>
       <a href="#">About</a>
       <a href="#">Contact</a>
+      <a href="#">Sponsors</a>
+      <a href="#">Donations</a>
     </nav>
     <h1>Everything about us </h1>
     <p>This is first paragraph</p>
